# segments

./: Pipfile  README.rst  constructors.py  dclasses.py  lint.sh  pyproject.toml  syllabification.py
