[tool.poetry]
name = "greek-segments"
version = "0.1.0"
description = "basic text modelling for Ancient Greek"
authors = ["James Tauber <jtauber@jtauber.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7, ^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
